cloudformation/security.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation Template for managing the security

Parameters:
  VPC:
    Type: AWS::EC2::VPC::Id

  Environment:
    Description: development | stage |production
    Type: String
    AllowedValues:
      - development
      - stage
      - production

Conditions:
  IsStaging:
    Fn::Equals:
      - Ref: Environment
      - stage

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: LoadBalancerSecurityGroup
      GroupDescription: LoadBalancerSecurityGroup
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
      Tags:
        - Key: Name
          Value:
            Fn::Sub: Learning-Tracking-LoadBalancer-SG-{Environment}

  InstancesSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: InstancesSecurityGroup
      GroupDescription: InstancesSecurityGroup
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - SourceSecurityGroupId:
            Ref: LoadBalancerSecurityGroup
          FromPort: 3000
          ToPort: 3000
          IpProtocol: tcp
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value:
            Fn::Sub: Learning-Tracking-Instances-SG-{Environment}

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RDSSecurityGroup
      GroupDescription: RDSSecurityGroup
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - SourceSecurityGroupId:
            Ref: InstancesSecurityGroup
          FromPort: 5432
          ToPort: 5432
          IpProtocol: tcp
      Tags:
        - Key: Name
          Value:
            Fn::Sub: Learning-Tracking-RDS-SG-{Environment}

  VpcEndpointSecurityGroup:
    Condition: IsStaging
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VpcEndpointSecurityGroup
      GroupDescription: VpcEndpointSecurityGroup
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - SourceSecurityGroupId:
            Ref: InstancesSecurityGroup
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
      Tags:
        - Key: Name
          Value:
            Fn::Sub: Learning-Tracking-Instances-SG-{Environment}

Outputs:
  VpcEndpointSecurityGroup:
    Value:
      Fn::If:
        - IsStaging
        - Ref: VpcEndpointSecurityGroup
        - ''

  LoadBalancerSecurityGroup:
    Value:
      Ref: LoadBalancerSecurityGroup

  InstancesSecurityGroup:
    Value:
      Ref: InstancesSecurityGroup

  RDSSecurityGroup:
    Value:
      Ref: RDSSecurityGroup
